# zbot

./: README.rst  pyproject.toml
mods/: __init__.py  dbg.py
zbot/: __init__.py  irc.py
